# chip8-emulator

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: ci.yml
include/: chip8.h
src/: core.c
tests/: simple.c
